"Reconcile affected objects" option implemented for roles

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.properties
@@ -17,5 +17,6 @@
 ExecuteChangeOptionsPanel.options=Options
 ExecuteChangeOptionsPanel.label.force=Force
 ExecuteChangeOptionsPanel.label.reconcile=Reconcile
+ExecuteChangeOptionsPanel.label.reconcileAffected=Reconcile affected objects
 ExecuteChangeOptionsPanel.label.executeAfterAllApprovals=Execute after all approvals
 ExecuteChangeOptionsPanel.label.keepDisplayingResults=Keep displaying results
