TreeTabel panel improvements - adding inline menus, improving queries etc.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -19,7 +19,8 @@ TreeTablePanel.childOrg=Children org. units
 TreeTablePanel.members=Members
 TreeTablePanel.managers=Managers
 TreeTablePanel.menu.addOrgUnit=Add org. unit
-TreeTablePanel.menu.addUser=Add user
+TreeTablePanel.menu.addManager=Add manager
+TreeTablePanel.menu.addMember=Add member
 TreeTablePanel.menu.delete=Delete
 TreeTablePanel,menu.recompute=Recompute
 TreeTablePanel.menu.removeFromHierarchy=Remove from org. unit
