Temporarily hacked MID-2079: ConnId framework version in "About" page

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
@@ -25,6 +25,7 @@ PageAbout.title.basic=Basic
 PageAbout.title.systemProperties=System properties
 PageAbout.title.repository=Repository
 PageAbout.title.repository.additional=Additional details
+PageAbout.title.provisioning=Provisioning
 PageAbout.title.jvmProperties=JVM properties
 PageAbout.repoDiag.implementationShortName=Implementation name
 PageAbout.repoDiag.implementationDescription=Implementation description
