--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/NavigatorPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/NavigatorPanel.properties
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-NavigatorPanel.previous=Previous
-NavigatorPanel.dots=...
-NavigatorPanel.next=Next
-NavigatorPanel.first=1
+NavigatorPanel.firstLink=<<
+NavigatorPanel.previousLink=<
+NavigatorPanel.nextLink=>
+NavigatorPanel.lastLink=>>
