MID-2160 improvement - explicit check, if inbound mapping has a target.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
@@ -54,3 +54,4 @@ Channel.user=User
 Channel.webService=Web Service
 
 MappingEditorDialog.message.cantSave=Couldn't save mapping. Reason:
+MappingEditorDialog.message.warn.emptyTarget=Inbound mapping requires 'target' field to be specified.
