--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/DropDownFormGroup.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/DropDownFormGroup.properties
@@ -14,6 +14,4 @@
 # limitations under the License.
 #
 
-DropDownChoicePanel.notDefined=Undefined
-nullValid=Choose one
-select.null=Choose one
+DropDownChoicePanel.empty=Choose one
