--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
@@ -41,4 +41,5 @@ SystemConfigPanel.mail.transportSecurity=Transport security
 SystemConfigPanel.notification.redirectToFile=Redirect to file
 SystemConfigPanel.notification.redirectToFile.placeholder=Filename
 SystemConfigPanel.tooltip.duration=Format: P[n][p], n-number, p-period (d - days, m - months, ...), P3M - cleanup every 3 months
+SystemConfigPanel.deprecated.objectPolicy=This part of configuration is deprecated. It is kept here for compatibility purposes. Please, use the component below to define object policies.
 mainForm.mailServer.nullValid=Choose One
