--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -67,7 +67,7 @@
         <jdbc.postgres>9.3-1102-jdbc41</jdbc.postgres>
         <jdbc.mysql>5.1.31</jdbc.mysql>
         <wicket.version>6.17.0</wicket.version>
-        <groovy.version>1.8.6</groovy.version>
+        <groovy.version>2.4.0</groovy.version>
         <activiti-engine.version>5.17.0</activiti-engine.version>
         <activiti-spring.version>5.17.0</activiti-spring.version>
         <commons-email.version>1.3</commons-email.version>
@@ -148,6 +148,11 @@
             <dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy</artifactId>
+				<version>${groovy.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.groovy</groupId>
+				<artifactId>groovy-jsr223</artifactId>
 				<version>${groovy.version}</version>
 			</dependency>
             <dependency>
