--- a/model/model-common/pom.xml
+++ b/model/model-common/pom.xml
@@ -78,7 +78,10 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy</artifactId>
-			<version>1.8.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-jsr223</artifactId>
 		</dependency>
 		<!-- Testing dependecies -->
 		<dependency>
