--- a/infra/test-util/src/main/resources/test-data/opendj.template/config/java.properties
+++ b/infra/test-util/src/main/resources/test-data/opendj.template/config/java.properties
@@ -1,17 +1,28 @@
+# CDDL HEADER START
 #
-# Copyright (c) 2010-2013 Evolveum
+# The contents of this file are subject to the terms of the
+# Common Development and Distribution License, Version 1.0 only
+# (the "License").  You may not use this file except in compliance
+# with the License.
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
+# You can obtain a copy of the license at
+# trunk/opends/resource/legal-notices/OpenDS.LICENSE
+# or https://OpenDS.dev.java.net/OpenDS.LICENSE.
+# See the License for the specific language governing permissions
+# and limitations under the License.
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+# When distributing Covered Code, include this CDDL HEADER in each
+# file and include the License file at
+# trunk/opends/resource/legal-notices/OpenDS.LICENSE.  If applicable,
+# add the following below this CDDL HEADER, with the fields enclosed
+# by brackets "[]" replaced with your own identifying information:
+#      Portions Copyright [yyyy] [name of copyright owner]
 #
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+# CDDL HEADER END
+#
+#      Copyright 2008-2010 Sun Microsystems, Inc.
+#      Portions Copyright 2011 ForgeRock AS
+#
 #
 
 #
@@ -46,14 +57,14 @@
 # specified settings.
 #
 # Examples:
-# Specify to overwrite the content of the environment variable OPENDS_JAVA_HOME
+# Specify to overwrite the content of the environment variable OPENDJ_JAVA_HOME
 # (i.e. the contents of this properties file for the java home will be analyzed
-# before checking whether OPENDS_JAVA_HOME is specified in the environment):
+# before checking whether OPENDJ_JAVA_HOME is specified in the environment):
 # overwrite-env-java-home=true
 #
-# Specify to overwrite the content of the environment variable OPENDS_JAVA_ARGS
+# Specify to overwrite the content of the environment variable OPENDJ_JAVA_ARGS
 # (i.e. the contents of this properties file for the java args will be analyzed
-# before checking whether OPENDS_JAVA_ARGS is specified in the environment):
+# before checking whether OPENDJ_JAVA_ARGS is specified in the environment):
 # overwrite-env-java-args=true
 #
 # Specify to use a particular Java Virtual Machine for the offline import:
@@ -73,7 +84,7 @@
 # an associated property defined:
 # default.java-args=-client
 
-default.java-home=/usr/lib/jvm/java-6-sun-1.6.0.26/jre
+default.java-home=/usr/lib/jvm/java-7-openjdk-amd64/jre
 overwrite-env-java-home=false
 overwrite-env-java-args=false
 
@@ -88,8 +99,8 @@ ldapcompare.java-args=-Xms8m -client
 restore.offline.java-args=-server
 manage-account.java-args=-Xms8m -client
 import-ldif.offline.java-args=-server
-ldappasswordmodify.java-args=-Xms8m -client
 verify-index.java-args=-server
+ldappasswordmodify.java-args=-Xms8m -client
 uninstall.java-args=-Xms8m -client
 dbtest.java-args=-server
 start-ds.java-args=-server
