--- a/infra/test-util/src/main/resources/test-data/opendj.template/config/tools.properties
+++ b/infra/test-util/src/main/resources/test-data/opendj.template/config/tools.properties
@@ -1,18 +1,35 @@
+# CDDL HEADER START
 #
-# Copyright (c) 2010-2013 Evolveum
+# The contents of this file are subject to the terms of the
+# Common Development and Distribution License, Version 1.0 only
+# (the "License").  You may not use this file except in compliance
+# with the License.
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
+# You can obtain a copy of the license at
+# trunk/opends/resource/legal-notices/OpenDS.LICENSE
+# or https://OpenDS.dev.java.net/OpenDS.LICENSE.
+# See the License for the specific language governing permissions
+# and limitations under the License.
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+# When distributing Covered Code, include this CDDL HEADER in each
+# file and include the License file at
+# trunk/opends/resource/legal-notices/OpenDS.LICENSE.  If applicable,
+# add the following below this CDDL HEADER, with the fields enclosed
+# by brackets "[]" replaced with your own identifying information:
+#      Portions Copyright [yyyy] [name of copyright owner]
 #
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+# CDDL HEADER END
 #
+#      Copyright 2008 Sun Microsystems, Inc.
+#
+#
+# Default argument values. These arguments will be the
+# default values for all OpenDS client tools. Defaults
+# can be overridden on a per-client basis by prefixing
+# the argument name with the name of the client. 
+# hostname=localhost
+# port=4444
+# bindDN=cn=directory manager
 
 # Default ldapcompare argument values. This overrides the
 # default value for the "port" argument defined above. 
