fix for MID-2245

--- a/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
+++ b/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
@@ -43,14 +43,14 @@
         </param-value>
     </context-param>
 
-    <context-param>
+    <!--context-param>
         <param-name>log4jConfigLocation</param-name>
         <param-value>/WEB-INF/log4j.properties</param-value>
-    </context-param>
+    </context-param-->
 
-    <listener>
+    <!--listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-    </listener>
+    </listener-->
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
