--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -338,7 +338,7 @@
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>report-impl</artifactId>
             <version>3.2-SNAPSHOT</version>
-            <scope>runtime</scope>
+<!--             <scope>runtime,compile</scope> -->
         </dependency>
 	<dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
