--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -340,6 +340,18 @@
             <version>3.2-SNAPSHOT</version>
 <!--             <scope>runtime,compile</scope> -->
         </dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>report-ds-impl</artifactId>
+            <version>3.2-SNAPSHOT</version>
+			<scope>runtime</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+    		</exclusions>
+        </dependency>
 	<dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>common</artifactId>
