--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -28,6 +28,10 @@ PageRoleEditor.label.description=Description
 PageRoleEditor.label.type=Type
 PageRoleEditor.label.requestable=Requestable
 PageRoleEditor.label.identifier=Identifier
+PageRoleEditor.label.ownerRef=Owner
+PageRoleEditor.label.ownerRef.placeholder=Set Owner
 PageRoleEditor.extension=Extension
 PageRoleEditor.message.cantCreateExtensionDelta=Can't create delta for role extension
+PageRoleEditor.message.cantAddOwner=Can't setup the selected owner.
+PageRoleEditor.message.addOwnerOk=Owner with name: '{0}' was added successfully.
 
