--- a/model/pom.xml
+++ b/model/pom.xml
@@ -59,6 +59,6 @@
         <module>notifications-impl</module>
         <module>report-api</module>
         <module>report-impl</module>
-<!--         <module>report-ds-impl</module> -->
+        <module>report-ds-impl</module>
     </modules>
 </project>
