--- a/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
+++ b/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
@@ -32,8 +32,8 @@
             classpath:ctx-provisioning.xml,
             classpath:ctx-audit.xml,
             classpath:ctx-security.xml,
-            classpath:ctx-report.xml 
             classpath:ctx-model.xml,
+            classpath:ctx-report.xml,
             classpath*:ctx-workflow.xml,
             classpath*:ctx-notifications.xml,
 <!--             classpath:ctx-camel-imports.xml, -->
