Adding approverRef chooser component to role editor.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -31,8 +31,11 @@ PageRoleEditor.label.requestable=Requestable
 PageRoleEditor.label.identifier=Identifier
 PageRoleEditor.label.ownerRef=Owner
 PageRoleEditor.label.ownerRef.placeholder=Set Owner
+PageRoleEditor.label.approverRef=Approver
+PageRoleEditor.label.approverRef.placeholder=Set Approver
 PageRoleEditor.extension=Extension
 PageRoleEditor.message.cantCreateExtensionDelta=Can't create delta for role extension
 PageRoleEditor.message.cantAddOwner=Can't setup the selected owner.
 PageRoleEditor.message.addOwnerOk=Owner with name: '{0}' was added successfully.
+PageRoleEditor.message.addApproverOk=Approver with name: '{0}' was added successfully.
 
