--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -29,6 +29,7 @@ PageRoleEditor.label.description=Description
 PageRoleEditor.label.type=Type
 PageRoleEditor.label.requestable=Requestable
 PageRoleEditor.label.identifier=Identifier
+PageRoleEditor.label.riskLevel=Risk Level
 PageRoleEditor.label.ownerRef=Owner
 PageRoleEditor.label.ownerRef.placeholder=Set Owner
 PageRoleEditor.label.approverRef=Approver
