--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -261,6 +261,17 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.0</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+  <groupId>org.codehaus.groovy.modules.http-builder</groupId>
+  <artifactId>http-builder</artifactId>
+  <version>0.7</version>
+</dependency>
+        <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-cache</artifactId>
             <version>3.2-SNAPSHOT</version>
