MID-2228 implementation - min/max assignments editor.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -34,6 +34,9 @@ PageRoleEditor.label.ownerRef=Owner
 PageRoleEditor.label.ownerRef.placeholder=Set Owner
 PageRoleEditor.label.approverRef=Approver
 PageRoleEditor.label.approverRef.placeholder=Set Approver
+PageRoleEditor.label.minAssignments=Min. Assignments
+PageRoleEditor.label.maxAssignments=Max. Assignments
+PageRoleEditor.label.assignmentConstraint.placeholder=Set assignment policy
 PageRoleEditor.extension=Extension
 PageRoleEditor.message.cantCreateExtensionDelta=Can't create delta for role extension
 PageRoleEditor.message.cantAddOwner=Can't setup the selected owner.
