--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -57,6 +57,10 @@ Boolean.NULL=Undefined
 Boolean.TRUE=True
 Boolean.FALSE=False
 
+PolicyConstraintEnforcementType.ENFORCE=Enforce
+PolicyConstraintEnforcementType.REMEDIATE=Remediate
+PolicyConstraintEnforcementType.REPORT=Report
+
 User.superuser=Superuser
 User.disabled=Disabled
 
