MID-1815 implementation - not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -23,6 +23,7 @@ pageUser.title.editing={0}
 pageUser.accounts=Accounts
 pageUser.assignments=Assignments
 pageUser.tasks=Tasks
+pageUser.button.recompute.assignments=Recompute Assignments
 pageUser.button.save=Save
 pageUser.button.abort=Abort
 pageUser.button.back=Back
