Adding Password Reset with Securtiy Questions  Files

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/forgetpassword/PageForgetPassword.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/forgetpassword/PageForgetPassword.properties
@@ -13,7 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-UserMenuPanel.logout=Log out
-UserMenuPanel.editProfile=Edit profile
-UserMenuPanel.resetPasswords=Reset passwords
-UserMenuPanel.editPasswordQuestions=Reset Security Questions
+
+page.title=Forget Password
+PageForgetPassword.resetPassword=Reset Password
+PageForgetPassword.username=Username
+PageForgetPassword.password=Password
+PageForgetPassword.email=E-mail
+pageForgetPassword.message.usernotfound=User Not Found
