Replaced Forget password with Forgot password (displayed strings only)

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/forgetpassword/PageForgetPassword.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/forgetpassword/PageForgetPassword.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-page.title=Forget Password
+page.title=Forgot Password
 PageForgetPassword.resetPassword=Reset Password
 PageForgetPassword.username=Username
 PageForgetPassword.password=Password
