--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/login/PageLogin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/login/PageLogin.properties
@@ -18,4 +18,4 @@ page.title=Login
 PageLogin.signIn=Sign in
 PageLogin.username=Username
 PageLogin.password=Password
-PageLogin.forgetPassword=Forget Password
+PageLogin.forgetPassword=Forgot Password
