--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignmentPreviewDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignmentPreviewDialog.properties
@@ -17,3 +17,4 @@
 AssignmentPreviewDialog.label=View direct & indirect assignments
 AssignmentPreviewDialog.button.cancel=Cancel
 AssignmentPreviewDialog.column.name=Name
+AssignmentPreviewDialog.column.description=Description
