Eliminating superfluous groovy jars (included in groovy-all).

--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -148,12 +148,7 @@
             </dependency>
             <dependency>
 				<groupId>org.codehaus.groovy</groupId>
-				<artifactId>groovy</artifactId>
-				<version>${groovy.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.codehaus.groovy</groupId>
-				<artifactId>groovy-jsr223</artifactId>
+				<artifactId>groovy-all</artifactId>
 				<version>${groovy.version}</version>
 			</dependency>
 			<dependency>
@@ -611,6 +606,23 @@
                         <groupId>com.fasterxml.jackson.core</groupId>
                         <artifactId>jackson-annotations</artifactId>
                     </exclusion>
+                    <!-- use in midPoint 3.2
+                    <exclusion>
+                        <groupId>org.apache.lucene</groupId>
+                        <artifactId>lucene-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.lucene</groupId>
+                        <artifactId>lucene-analyzers-common</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.lucene</groupId>
+                        <artifactId>lucene-queryparser</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>jfree</groupId>
+                        <artifactId>jfreechart</artifactId>
+                    </exclusion> -->
                 </exclusions>
             </dependency>
 
