--- a/infra/common/pom.xml
+++ b/infra/common/pom.xml
@@ -56,7 +56,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy</artifactId>
+			<artifactId>groovy-all</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
