--- a/gui/admin-gui-es-ES/src/main/resources/com/evolveum/midpoint/web/page/PageTemplate_es_ES.utf8.properties
+++ b/gui/admin-gui-es-ES/src/main/resources/com/evolveum/midpoint/web/page/PageTemplate_es_ES.utf8.properties
@@ -11,5 +11,5 @@ PageBase.clearCssCache=Clear less/js cache
 WorkItemsPanel.assigned=Assignee or candidate
 WorkItemsPanel.created=Created
 WorkItemsPanel.name=Name
-pageBase.midPointVersion=Version\: ${pom.version}, describe\: ${describe}
+pageBase.midPointVersion=Version\: ${pom.version}, ${describe}
 pageBase.unknownBuildNumber=unknown
