--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
@@ -11,5 +11,5 @@ PageBase.clearCssCache=Clear less/js cache
 WorkItemsPanel.assigned=Assigned to
 WorkItemsPanel.created=Created
 WorkItemsPanel.name=Name
-pageBase.midPointVersion=Verzia\: ${pom.version}, popis\: ${describe}
+pageBase.midPointVersion=Verzia\: ${pom.version}, ${describe}
 pageBase.unknownBuildNumber=neznáme
