Preview assignments: showing tenantRef, orgRef, kind, intent. Excluding disabled (not valid) assignments.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignmentPreviewDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignmentPreviewDialog.properties
@@ -18,5 +18,9 @@ AssignmentPreviewDialog.label=View direct & indirect assignments
 AssignmentPreviewDialog.button.cancel=Cancel
 AssignmentPreviewDialog.column.name=Name
 AssignmentPreviewDialog.column.description=Description
+AssignmentPreviewDialog.column.tenant=Tenant
+AssignmentPreviewDialog.column.orgRef=Org
+AssignmentPreviewDialog.column.kind=Kind
+AssignmentPreviewDialog.column.intent=Intent
 AssignmentPreviewDialog.type.direct=Direct
 AssignmentPreviewDialog.type.indirect=Indirect
