--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -72,6 +72,7 @@ pageUser.message.illegalAccountState=Illegal account state '{0}'.
 pageUser.message.illegalAssignmentState=Illegal assignment state '{0}'.
 pageUser.message.unsupportedState=Unsupported user form state '{0}'.
 pageUser.message.noAssignmentsAvailable=There are currently no assignments to preview.
+pageUser.message.noUserName=It is not possible to compute assignments on unnamed user object. Please provide a name.
 
 LockoutStatusType.NORMAL=Normal
 LockoutStatusType.LOCKED=Locked
