exclusion for javax.servlet (causing problem while starting embedded tomcat in eclipse..)

--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -289,6 +289,10 @@
             		<artifactId>jaxb-core</artifactId>
             		<groupId>com.sun.xml.bind</groupId>
             	</exclusion>
+      <!--      	<exclusion>
+            		<artifactId>javax.servlet</artifactId>
+            		<groupId>org.eclipse.jetty.orbit</groupId>
+            	</exclusion> -->
             </exclusions>
         </dependency>
         <dependency>
@@ -525,6 +529,7 @@
             <artifactId>connector-csvfile</artifactId>
             <scope>runtime</scope>
         </dependency>
+     
         <!-- end connectors -->
 
         <!-- logging bridges to slf4j -->
