Pasword Reset enchancements

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
@@ -7,6 +7,7 @@ PageBase.button.save=Save
 PageBase.button.saveAndRun=Save & Run
 PageBase.button.search=Search
 PageBase.button.update=Update
+PageBase.button.send=Send
 PageBase.clearCssCache=Clear less/js cache
 WorkItemsPanel.assigned=Assigned to
 WorkItemsPanel.created=Created
