--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd.properties
@@ -21,6 +21,7 @@ pageTask.browse=Browse
 pageTask.name=Task name
 pageTask.kind=Kind
 pageTask.intent=Intent
+pageTask.objectClass=Object class
 pageTask.scheduleTitle=Scheduling
 pageTask.recurring=Recurring task
 pageTask.bound=Tightly bound (use if recurring task runs often)
@@ -57,5 +58,4 @@ pageTask.boundHelp=Tightly bound tasks are used to run short actions, which are 
   is not supported for these tasks; you have to specify the time interval. 
 pageTask.cronHelp=Cron-like specification is in the form: SECONDS MINUTES HOURS DAY-OF-MONTH MONTH DAY-OF-WEEK YEAR \
   (optional), e.g. '0 0 12 ? * WED' which means 'every Wednesday at 12:00:00 pm'. 
-pageTask.cronHelpLink=For more information, please see 
 
