--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
@@ -34,6 +34,7 @@ pageTaskEdit.execution=Execution status
 pageTaskEdit.objectRef=Resource reference
 pageTaskEdit.kind=Kind
 pageTaskEdit.intent=Intent
+pageTaskEdit.objectClass=Object class
 pageTaskEdit.workerThreads=Worker threads
 pageTaskEdit.suspendReq=For editing is necessary to suspend the task
 
