--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignablePopupContent.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignablePopupContent.properties
@@ -24,3 +24,5 @@ TreeTablePanel.hierarchy=Org. hierarchy
 TreeTablePanel.childOrg=Children org. units
 TreeTablePanel.collapseAll=Collapse all
 TreeTablePanel.expandAll=Expand all
+assignablePopupContent.role.type=Role type
+typeSelect.null=All roles
