--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageMyPasswordQuestions.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageMyPasswordQuestions.properties
@@ -14,6 +14,5 @@
 # limitations under the License.
 #
 
-page.title=Şifre Sorularım
-
-
+page.title=My Password Questions
+message.success=Your Answers Were Updated Successfully
