fixing audit report..

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -108,6 +108,19 @@ AuditEventType.WORK_ITEM=Work item
 AuditEventType.WORKFLOW_PROCESS_INSTANCE=Workflow process instance
 AuditEventType.RECONCILIATION=Reconciliation
 
+AuditEventTypeType.null=All
+AuditEventTypeType.GET_OBJECT=Get object
+AuditEventTypeType.ADD_OBJECT=Add object
+AuditEventTypeType.MODIFY_OBJECT=Modify object
+AuditEventTypeType.DELETE_OBJECT=Delete object
+AuditEventTypeType.EXECUTE_CHANGES_RAW=Execute changes raw
+AuditEventTypeType.SYNCHRONIZATION=Synchronization
+AuditEventTypeType.CREATE_SESSION=Create session
+AuditEventTypeType.TERMINATE_SESSION=Terminate session
+AuditEventTypeType.WORK_ITEM=Work item
+AuditEventTypeType.WORKFLOW_PROCESS_INSTANCE=Workflow process instance
+AuditEventTypeType.RECONCILIATION=Reconciliation
+
 ExportType.PDF=PDF
 ExportType.CSV=CSV
 ExportType.XML=XML
