--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>com.evolveum.midpoint</groupId>
         <artifactId>midpoint</artifactId>
-        <version>3.2-SNAPSHOT</version>
+        <version>3.1.1</version>
     </parent>
     <pluginRepositories>
         <pluginRepository>
