--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ rebel.xml
 samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/bin
 samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/obj
 velocity.log
+
+dependency-reduced-pom.xml
