--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -890,6 +890,23 @@
 				          </execution>
 				        </executions>
 				      </plugin>   -->
+                    <plugin>
+                        <groupId>pl.project13.maven</groupId>
+                        <artifactId>git-commit-id-plugin</artifactId>
+                        <version>2.1.11</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>revision</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>2.3</version>
+                    </plugin>
                 </plugins>
             </build>
             <reporting>
