--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,7 @@
 		<module>icf-connectors</module>
 		<module>samples</module>
 		<module>testing</module>
+		<module>cli</module>
 	</modules>
 	<profiles>
 		<profile>
