--- a/model/certification-api/pom.xml
+++ b/model/certification-api/pom.xml
@@ -50,6 +50,11 @@
 			<version>3.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>model-api</artifactId>
+            <version>3.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
