Skeletal certification GUI pages almost done. Enhanced searchDecisions to cover more campaigns.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -107,8 +107,10 @@ PageAdmin.menu.top.reports.new= New report
 PageAdmin.menu.top.reports.list=Reports
 PageAdmin.menu.top.reports.created=Created reports
 PageAdmin.menu.top.certification=Certification
-PageAdmin.menu.top.certification.types=Certification types
-PageAdmin.menu.top.certification.current=Currently-run certifications
+PageAdmin.menu.top.certification.definitions=Campaign definitions
+PageAdmin.menu.top.certification.campaigns=Campaigns
+# TODO better name
+PageAdmin.menu.top.certification.decisions=Cases to decide
 PageAdmin.menu.top.configuration=Configuration
 PageAdmin.menu.top.configuration.bulkActions=Bulk actions
 PageAdmin.menu.top.configuration.importObject=Import object
