--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertDecisions.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertDecisions.properties
@@ -14,11 +14,13 @@
 # limitations under the License.
 #
 
-page.title=Access Certification Types
-page.subTitle=available
+page.title=Access Certification Decisions
+page.subTitle=
 
-PageCertificationTypes.table.name=Name
-PageCertificationTypes.table.description=Description
+PageCertDecisions.table.subjectName=Subject
+PageCertDecisions.table.targetName=Assigned object name
+PageCertDecisions.table.targetType=Type
+# TODO change to "Maintain" / "Revoke" / "No idea" / "Delegate" ...
+PageCertDecisions.table.decision=Decision
+PageCertDecisions.table.comment=Comment
 
-PageCertificationTypes.button.run=Run
-PageCertificationTypes.button.configure=Configure
