--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertDefinitions.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertDefinitions.properties
@@ -14,11 +14,12 @@
 # limitations under the License.
 #
 
-page.title=Access Certification Runs
-page.subTitle=
+page.title=Access Certification Definitions
+page.subTitle=available
 
-PageCertificationRuns.table.name=Name
-PageCertificationRuns.table.description=Description
+PageCertDefinitions.table.name=Name
+PageCertDefinitions.table.description=Description
 
-PageCertificationRuns.button.run=Run
-PageCertificationRuns.button.configure=Configure
+PageCertDefinitions.button.showCampaigns=Show campaigns
+PageCertDefinitions.button.createCampaign=Create campaign
+#PageCertDefinitions.button.configure=Configure
