--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -48,8 +48,8 @@ ObjectTypeGuiDescriptor.reportOutput=Report output
 ObjectTypeGuiDescriptor.securityPolicy=Security policy
 ObjectTypeGuiDescriptor.orgManager=Org. manager
 ObjectTypeGuiDescriptor.lookupTable=Lookup table
-ObjectTypeGuiDescriptor.accessCertificationType=Access certification type
-ObjectTypeGuiDescriptor.accessCertificationRun=Access certification run
+ObjectTypeGuiDescriptor.accessCertificationDefinition=Access certification definition
+ObjectTypeGuiDescriptor.accessCertificationCampaign=Access certification campaign
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
