Certification GUI skeleton finished.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
@@ -21,5 +21,5 @@ PageCertCampaigns.table.name=Name
 PageCertCampaigns.table.description=Description
 PageCertCampaigns.table.stage=Stage
 
-PageCertCampaigns.button.start=Start
+PageCertCampaigns.button.start=Next stage
 PageCertCampaigns.button.configure=Configure
