record actions for buttons

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertDecisions.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertDecisions.properties
@@ -23,4 +23,11 @@ PageCertDecisions.table.targetType=Type
 # TODO change to "Maintain" / "Revoke" / "No idea" / "Delegate" ...
 PageCertDecisions.table.decision=Decision
 PageCertDecisions.table.comment=Comment
+PageCertDecisions.menu.accept=Accept
+PageCertDecisions.menu.revoke=Revoke
+PageCertDecisions.menu.reduce=Reduce
+PageCertDecisions.menu.notDecided=Not Decided
+PageCertDecisions.menu.delegate=Delegate
+PageCertDecisions.menu.noResponse=No Response
+
 
