Fixed a bug preventing changing reviewer's decision. Disabling buttons that correspond to current decisions. First steps to "close campaign" functionality.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
@@ -21,5 +21,7 @@ PageCertCampaigns.table.name=Name
 PageCertCampaigns.table.description=Description
 PageCertCampaigns.table.stage=Stage
 
-PageCertCampaigns.button.start=Next stage
-PageCertCampaigns.button.configure=Configure
+PageCertCampaigns.button.startFirst=Start campaign
+PageCertCampaigns.button.startNext=Start next stage
+PageCertCampaigns.button.close=Close campaign
+PageCertCampaigns.button.statistics=Statistics
