Storing stage and case start times and deadlines.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
@@ -20,6 +20,16 @@ page.subTitle=
 PageCertCampaigns.table.name=Name
 PageCertCampaigns.table.description=Description
 PageCertCampaigns.table.stage=Stage
+PageCertCampaigns.table.deadline=Deadline
+
+PageCertCampaigns.inForStage=in {0}
+PageCertCampaigns.inForCampaign=(campaign: in {0})
+
+PageCertCampaigns.agoForStage={0} ago
+PageCertCampaigns.agoForCampaign=(campaign: {0} ago)
+
+PageCertCampaigns.nowForStage=now
+PageCertCampaigns.nowForCampaign=(campaign: now)
 
 PageCertCampaigns.button.startFirst=Start campaign
 PageCertCampaigns.button.startNext=Start next stage
