"Close campaign" functionality. Automatic remediation (very simplified version).

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -76,6 +76,7 @@ pageTasks.category.Workflow=Workflow
 pageTasks.category.Cleanup=Cleanup
 pageTasks.category.System=System
 pageTasks.category.Report=Report
+pageTasks.category.AccessCertification=Access certification
 pageTasks.category.null=(undefined)
 
 PageAdmin.menu.top.home=Home
