--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
@@ -19,7 +19,9 @@ page.subTitle=
 
 PageCertCampaigns.table.name=Name
 PageCertCampaigns.table.description=Description
+PageCertCampaigns.table.state=State
 PageCertCampaigns.table.stage=Stage
+PageCertCampaigns.table.stages=Stages
 PageCertCampaigns.table.deadline=Deadline
 
 PageCertCampaigns.inForStage=in {0}
@@ -31,7 +33,9 @@ PageCertCampaigns.agoForCampaign=(campaign: {0} ago)
 PageCertCampaigns.nowForStage=now
 PageCertCampaigns.nowForCampaign=(campaign: now)
 
-PageCertCampaigns.button.startFirst=Start campaign
-PageCertCampaigns.button.startNext=Start next stage
-PageCertCampaigns.button.close=Close campaign
+PageCertCampaigns.button.startCampaign=Start campaign
+PageCertCampaigns.button.openNextStage=Open next stage
+PageCertCampaigns.button.closeStage=Close stage
+PageCertCampaigns.button.startRemediation=Start remediation
+PageCertCampaigns.button.closeCampaign=Close campaign
 PageCertCampaigns.button.statistics=Statistics
