Campaign definition is now copied into the campaign on creation. Reworked campaign statistics.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaignStatistics.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaignStatistics.properties
@@ -18,4 +18,12 @@ page.title=Certification Campaign
 page.subTitle=statistics
 PageCertCampaignStatistics.response=Response
 PageCertCampaignStatistics.items=Items
-PageCertCampaignStatistics.itemsRemedied=Items remedied
+PageCertCampaignStatistics.accept=Accept
+PageCertCampaignStatistics.revoke=Revoke
+PageCertCampaignStatistics.revokeRemedied=Revoke - remedied
+PageCertCampaignStatistics.reduce=Reduce
+PageCertCampaignStatistics.reduceRemedied=Reduce - remedied
+PageCertCampaignStatistics.delegate=Delegate
+PageCertCampaignStatistics.noDecision=No decision (abstain)
+PageCertCampaignStatistics.noResponse=No response
+
