--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/certification/PageCertCampaigns.properties
@@ -22,7 +22,7 @@ PageCertCampaigns.table.description=Description
 PageCertCampaigns.table.state=State
 PageCertCampaigns.table.stage=Stage
 PageCertCampaigns.table.stages=Stages
-PageCertCampaigns.table.deadline=Deadline
+PageCertCampaigns.table.deadline=Stage (campaign) deadline
 
 PageCertCampaigns.inForStage=in {0}
 PageCertCampaigns.inForCampaign=(campaign: in {0})
@@ -38,4 +38,10 @@ PageCertCampaigns.button.openNextStage=Open next stage
 PageCertCampaigns.button.closeStage=Close stage
 PageCertCampaigns.button.startRemediation=Start remediation
 PageCertCampaigns.button.closeCampaign=Close campaign
-PageCertCampaigns.button.statistics=Statistics
+#PageCertCampaigns.button.statistics=Statistics
+
+AccessCertificationCampaignStateType.CREATED=Created
+AccessCertificationCampaignStateType.IN_REVIEW_STAGE=In review stage
+AccessCertificationCampaignStateType.REVIEW_STAGE_DONE=Review stage done
+AccessCertificationCampaignStateType.IN_REMEDIATION=In remediation
+AccessCertificationCampaignStateType.CLOSED=Closed
